--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb+srv://expanse:gg@cluster0.hcap8ss.mongodb.net/
+MONGO_URL=mongodb+srv://shihab2209:IPCKEgbG6pA8tRfy@cluster0.dryxngt.mongodb.net/
 JWT_SECRET=12345678
