--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@tailwindcss/forms": "^0.5.4",
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1",
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
@@ -55,6 +58,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@material-tailwind/react": "^2.1.0",
+    "flowbite": "^1.8.1",
     "daisyui": "^3.5.1",
     "tailwindcss": "^3.3.3"
   }
