--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^6.11.5",
-    "nodemon": "^2.0.22"
+    "mongoose": "^6.11.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
